text space formatter overlapping issue fixes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -183,7 +183,7 @@ body, html {
 
 .side-nav {
     width: 100%;
-    min-height: 290px;
+    min-height: 300px;
 }
 
 .side-nav-circle {
@@ -191,15 +191,16 @@ body, html {
     background-color: #919E57;
     border-radius: 50%;
     width: 313px;
-    height: 320px;
+    height: 344px;
     left: -112px;
     top: -27px;
     z-index: -1;
 }
 
 .side-nav ul {
-    margin-left: 30px;
+    margin-left: 24px;
     margin-top: 18px;
+    padding-right: 5px;
 }
 
 .side-nav ul li {
@@ -208,13 +209,14 @@ body, html {
     color: #03030280;
     padding: 6px 35px;
     padding-left: 0px;
-    line-height: 1.3em;
+    line-height: 1.0em !important;
 }
 
 .side-nav ul li a {
     text-decoration: none;
     color: #292B17;
     font-weight: 600;
+    line-height: 1.3em !important;
 }
 
 .side-nav ul li a:hover {
@@ -233,7 +235,7 @@ body, html {
     font-family: "poppins-regular";
     font-size: 11px;
     line-height: 15px;
-    margin-left: 30px;
+    margin-left: 19px;
     margin-right: 11px;
     position: fixed;
     bottom: 0px;
